@@ -10,83 +10,83 @@
 
   <itemizedlist>
     <listitem>
-      <para>Portuguese (Brazilian)</para>
+      <simpara>Portuguese (Brazilian)</simpara>
     </listitem>
 
     <listitem>
-      <para>Bulgarian</para>
+      <simpara>Bulgarian</simpara>
     </listitem>
 
     <listitem>
-      <para>Catalan</para>
+      <simpara>Catalan</simpara>
     </listitem>
 
     <listitem>
-      <para>Chinese (both Simplified and Traditional)</para>
+      <simpara>Chinese (both Simplified and Traditional)</simpara>
     </listitem>
 
     <listitem>
-      <para>Czech</para>
+      <simpara>Czech</simpara>
     </listitem>
 
     <listitem>
-      <para>Danish</para>
+      <simpara>Danish</simpara>
     </listitem>
 
     <listitem>
-      <para>Dutch</para>
+      <simpara>Dutch</simpara>
     </listitem>
 
     <listitem>
-      <para>French</para>
+      <simpara>French</simpara>
     </listitem>
 
     <listitem>
-      <para>German</para>
+      <simpara>German</simpara>
     </listitem>
 
     <listitem>
-      <para>Hungarian</para>
+      <simpara>Hungarian</simpara>
     </listitem>
 
     <listitem>
-      <para>Italian</para>
+      <simpara>Italian</simpara>
     </listitem>
 
     <listitem>
-      <para>Japanese</para>
+      <simpara>Japanese</simpara>
     </listitem>
 
     <listitem>
-      <para>Korean</para>
+      <simpara>Korean</simpara>
     </listitem>
 
     <listitem>
-      <para>Norwegian</para>
+      <simpara>Norwegian</simpara>
     </listitem>
 
     <listitem>
-      <para>Polish</para>
+      <simpara>Polish</simpara>
     </listitem>
 
     <listitem>
-      <para>Russian</para>
+      <simpara>Russian</simpara>
     </listitem>
 
     <listitem>
-      <para>Slovak</para>
+      <simpara>Slovak</simpara>
     </listitem>
 
     <listitem>
-      <para>Spanish</para>
+      <simpara>Spanish</simpara>
     </listitem>
 
     <listitem>
-      <para>Swedish</para>
+      <simpara>Swedish</simpara>
     </listitem>
 
     <listitem>
-      <para>Turkish</para>
+      <simpara>Turkish</simpara>
     </listitem>
   </itemizedlist>
 
